test/files/neg/plugin-multiple-rafter/lib/plugins.jar.desired.sha1
17581956d255506bd2fb243a4f39774f17a1c98e ?plugins.jar
